--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,12 +14,18 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: '22'
+          node-version: 22 # ou 20 selon ton besoin
+          cache: 'yarn'
+
+      - name: Enable Corepack and set Yarn 4
+        run: |
+          corepack enable
+          corepack prepare yarn@4.0.1 --activate
 
       - name: Install dependencies
         run: yarn install
@@ -27,7 +33,7 @@ jobs:
       - name: Run ESLint
         run: yarn lint
 
-      - name: Type check with TypeScript
+      - name: Type check
         run: yarn typecheck
 
       - name: Run tests
