--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -19,15 +19,18 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: 22 # ou 20 selon ton besoin
-          cache: 'yarn'
+          node-version: 18 # ou 20 selon ce que tu veux
+          # ATTENTION : ne pas activer 'cache: yarn' ici si tu utilises Yarn 4 via Corepack
 
-      - name: Enable Corepack and set Yarn 4
+      - name: Enable Corepack and use Yarn 4
         run: |
           corepack enable
           corepack prepare yarn@4.0.1 --activate
 
-      - name: Install dependencies
+      - name: Check Yarn version
+        run: yarn --version
+
+      - name: Install dependencies with Yarn 4
         run: yarn install
 
       - name: Run ESLint
@@ -36,5 +39,5 @@ jobs:
       - name: Type check
         run: yarn typecheck
 
-      - name: Run tests
+      - name: Run unit tests
         run: yarn test
