--- a/package.json
+++ b/package.json
@@ -21,14 +21,16 @@
     "expo-status-bar": "~2.0.0",
     "jotai": "^2.8.4",
     "nanoid": "^3.3.7",
+    "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.5",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-reanimated": "3.16.2",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.4.0",
-    "react-native-web": "~0.19.13"
+    "react-native-web": "~0.19.13",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
