--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.4.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
-    "tailwindcss": "^3.4.17"
+    "tailwindcss": "^3.4.17",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
