--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@mui/material": "^7.1.0",
     "date-fns": "^4.1.0",
     "expo": "^52.0.23",
     "expo-constants": "~17.0.3",
