--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
   },
   "dependencies": {
     "@mui/material": "^7.1.0",
+    "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "expo": "^52.0.23",
     "expo-constants": "~17.0.3",
     "expo-linking": "~7.0.3",
     "expo-router": "~4.0.15",
     "expo-splash-screen": "~0.29.18",
+    "expo-sqlite": "~15.1.4",
     "expo-status-bar": "~2.0.0",
     "jotai": "^2.8.4",
     "nanoid": "^3.3.7",
@@ -32,6 +34,7 @@
     "react-native-screens": "~4.4.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.19.13",
+    "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0"
   },
