--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
+    "@react-native-community/slider": "^4.5.5",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "expo": "^52.0.23",
