--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4"
+    "zod": "^3.24.4",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
