--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
+    "@react-native-community/slider": "^4.5.5",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
     "expo": "^52.0.23",
@@ -27,6 +29,7 @@
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.56.4",
     "react-native": "0.76.5",
     "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "3.16.2",
@@ -36,7 +39,9 @@
     "react-native-web": "~0.19.13",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "zod": "^3.24.4",
+    "@react-native-community/datetimepicker": "8.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
