--- a/package.json
+++ b/package.json
@@ -14,48 +14,49 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
-    "@react-native-community/slider": "^4.5.5",
+    "@react-native-community/slider": "^4.5.6",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
-    "expo": "^52.0.23",
-    "expo-constants": "~17.0.3",
-    "expo-linking": "~7.0.3",
-    "expo-router": "~4.0.15",
-    "expo-splash-screen": "~0.29.18",
-    "expo-sqlite": "~15.1.4",
-    "expo-status-bar": "~2.0.0",
-    "jotai": "^2.8.4",
-    "nanoid": "^3.3.7",
+    "expo": "^53.0.9",
+    "expo-constants": "~17.1.6",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-splash-screen": "~0.30.8",
+    "expo-sqlite": "~15.2.10",
+    "expo-status-bar": "~2.2.3",
+    "jotai": "^2.12.4",
+    "nanoid": "^5.1.5",
     "nativewind": "^4.1.23",
-    "react": "18.3.1",
-    "react-dom": "18.3.1",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-hook-form": "^7.56.4",
-    "react-native": "0.76.5",
+    "react-native": "0.79.2",
     "react-native-get-random-values": "~1.11.0",
-    "react-native-reanimated": "3.16.2",
-    "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "~4.4.0",
+    "react-native-reanimated": "3.17.5",
+    "react-native-safe-area-context": "5.4.1",
+    "react-native-screens": "~4.10.0",
     "react-native-uuid": "^2.0.3",
-    "react-native-web": "~0.19.13",
+    "react-native-web": "~0.20.0",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
-    "zod": "^3.24.4",
-    "@react-native-community/datetimepicker": "8.2.0"
+    "zod": "^3.25.20",
+    "@react-native-community/datetimepicker": "8.3.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "@expo/metro-runtime": "~4.0.0",
+    "@react-native-community/cli": "latest",
+    "@babel/core": "^7.27.1",
+    "@expo/metro-runtime": "~5.0.4",
     "@testing-library/react-native": "^13.2.0",
-    "@types/eslint": "^8.56.10",
-    "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/eslint": "^9.6.1",
+    "@types/jest": "^29.5.14",
+    "@types/react": "~19.1.5",
     "@types/react-native-get-random-values": "^1",
-    "eslint": "^8.57.0",
+    "eslint": "^9.27.0",
     "jest": "^29.7.0",
-    "msw": "^2.4.4",
-    "react-test-renderer": "18.3.1",
-    "typescript": "~5.3.3"
+    "msw": "^2.8.4",
+    "react-test-renderer": "19.0.0",
+    "typescript": "~5.8.3"
   },
   "private": true,
   "packageManager": "yarn@4.0.1"
