--- a/package.json
+++ b/package.json
@@ -61,6 +61,5 @@
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true,
-  "packageManager": "yarn@4.0.1"
+  "private": true
 }
