--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
     "@mui/material": "^7.1.0",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-community/slider": "^4.5.6",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
@@ -25,6 +26,7 @@
     "expo-sqlite": "~15.2.10",
     "expo-status-bar": "~2.2.3",
     "jotai": "^2.12.4",
+    "lucide-react-native": "^0.511.0",
     "nanoid": "^5.1.5",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -32,21 +34,22 @@
     "react-hook-form": "^7.56.4",
     "react-native": "0.79.2",
     "react-native-get-random-values": "~1.11.0",
+    "react-native-progress-steps": "^2.0.3",
     "react-native-reanimated": "3.17.5",
     "react-native-safe-area-context": "5.4.1",
     "react-native-screens": "~4.10.0",
+    "react-native-svg": "^15.12.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "~0.20.0",
     "react-redux": "^9.2.0",
     "tailwindcss": "^3.4.17",
     "uuid": "^11.1.0",
-    "zod": "^3.25.20",
-    "@react-native-community/datetimepicker": "8.3.0"
+    "zod": "^3.25.20"
   },
   "devDependencies": {
-    "@react-native-community/cli": "latest",
     "@babel/core": "^7.27.1",
     "@expo/metro-runtime": "~5.0.4",
+    "@react-native-community/cli": "latest",
     "@testing-library/react-native": "^13.2.0",
     "@types/eslint": "^9.6.1",
     "@types/jest": "^29.5.14",
@@ -58,6 +61,5 @@
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
-  "private": true,
-  "packageManager": "yarn@4.0.1"
+  "private": true
 }
