--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,26 +20,16 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 18 # ou 20 selon ce que tu veux
-          # ATTENTION : ne pas activer 'cache: yarn' ici si tu utilises Yarn 4 via Corepack
+          cache: 'npm' # Activation du cache npm pour améliorer les performances
 
-      - name: Enable Corepack and use Yarn 4
-        run: |
-          corepack enable
-          corepack prepare yarn@4.0.1 --activate
-
-      - name: Check Yarn version
-        run: yarn --version
-
-      - name: Install dependencies with Yarn 4
-        run: |
-          yarn cache clean
-          yarn install --immutable
+      - name: Install dependencies with npm
+        run: npm install
 
       - name: Run ESLint
-        run: yarn lint
+        run: npm run lint
 
       - name: Type check
-        run: yarn typecheck
+        run: npm run typecheck
 
       - name: Run unit tests
-        run: yarn test
+        run: npm run test
